--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,24 +4,24 @@ project(Systemy_operacyjne_2__projekt)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
-include_directories(model)
+include_directories(pizzeria)
 
 add_executable(Systemy_operacyjne_2__projekt
-        model/Cook.cpp
-        model/Cook.h
-        model/DeliveryMan.cpp
-        model/DeliveryMan.h
-        model/Oven.cpp
-        model/Oven.h
-        model/Shelf.cpp
-        model/Shelf.h
-        model/SimulationModel.cpp
-        model/SimulationModel.h
-        model/Sink.cpp
-        model/Sink.h
-        model/ThermalBag.cpp
-        model/ThermalBag.h
-        model/Worktop.cpp
-        model/Worktop.h
-        model/Controller.cpp
-        model/Entity.cpp model/Entity.h)
+        pizzeria/Cook.cpp
+        pizzeria/Cook.h
+        pizzeria/DeliveryMan.cpp
+        pizzeria/DeliveryMan.h
+        pizzeria/Oven.cpp
+        pizzeria/Oven.h
+        pizzeria/Shelf.cpp
+        pizzeria/Shelf.h
+        pizzeria/SimulationModel.cpp
+        pizzeria/SimulationModel.h
+        pizzeria/Sink.cpp
+        pizzeria/Sink.h
+        pizzeria/ThermalBag.cpp
+        pizzeria/ThermalBag.h
+        pizzeria/Worktop.cpp
+        pizzeria/Worktop.h
+        pizzeria/Controller.cpp
+        pizzeria/Entity.cpp pizzeria/Entity.h)
